[gd_scene load_steps=2 format=3 uid="uid://ceucr0l84tu51"]

[ext_resource type="Script" uid="uid://bphe763uiqrs3" path="res://dev_tool/logger/ui/components/log_header.gd" id="1_script"]

[node name="LogHeader" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Debug:"

[node name="lbl_DebugCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Info:"

[node name="lbl_InfoCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Warning:"

[node name="lbl_WarningCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Error:"

[node name="lbl_ErrorCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Total:"

[node name="lbl_TotalCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
